feat(dto): refactor workout DTOs to replace stream API calls with Collectors usage